--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-"name": "Robin-web-pair",
+"name": "web-pair",
     "version": "0.0.1",
     "description": "A multi functional whatsapp bot Web paircode.",
     "main": "index.js",
     "scripts": {
-      "start": "pm2 start index.js --deep-monitoring --attach --name Robin",
-      "stop": "pm2 stop robin",
-     "restart": "pm2 restart robin"
+      "start": "pm2 start index.js --deep-monitoring --attach --name SENUWA-MD",
+      "stop": "pm2 stop SENUWA-MD",
+     "restart": "pm2 restart SENUWA-MD"
     },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.9",
+    "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "qrcode": "^1.5.4",
-    "awesome-phonenumber": "^7.2.0",
-    "pino": "^9.6.0",
-    "phone" : "^3.1.56",
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
+    "awesome-phonenumber": "^7.5.0",
+    "pino": "^10.1.0",
+    "phone" : "^3.1.67",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
     "path": "^0.12.7",
-    "megajs": "^1.3.5",
-    "pm2": "^5.4.3",
-    "rimraf": "^6.0.1",
-    "@eslint/config-array": "^0.19.1",
-    "@eslint/object-schema": "^2.1.5",
-    "eslint": "^9.17.0"
+    "megajs": "^1.3.9",
+    "pm2": "^6.0.13"
    }
 }
