--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "express": "^5.1.0",
     "path": "^0.12.7",
     "megajs": "^1.3.9",
-    "pm2": "^6.0.13"
+    "pm2": "^6.0.13",
+    "rimraf": "^6.0.1",
+    "@eslint/config-array": "^0.21.1",
+    "@eslint/object-schema": "^2.1.7",
+    "eslint": "^9.38.0"
    }
 }
