--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
      "restart": "pm2 restart SENUWA-MD"
     },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.19",
+    "@whiskeysockets/baileys": "^7.0.0-rc.6",
     "qrcode": "^1.5.4",
     "awesome-phonenumber": "^7.5.0",
     "pino": "^10.1.0",
